--- a/Log.html
+++ b/Log.html
@@ -38,7 +38,7 @@
 
 		<br />
 		<p>
-			Last Updated On 24/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 06/01/2018 (DD/MM/YYYY):<br />"New Year"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -423,7 +423,13 @@
 			<br />
 			<br />
 			<br />
+			<br />
+			<br />
+			<br />
+			<br />
 		</p>
+		<h1>2018</h1>
+		<p><br />01/06<br />code simplified<br /><br /><br /></p>
 
 		<p>
 		<br />
@@ -441,7 +447,7 @@
 			</a>
 		</p>
 		<p>
-			Copyright &copy; 2017 Yaoze Ye
+			Copyright &copy; 2018 Yaoze Ye
 		</p>	
 	</body>
 </html>
