--- a/index.html
+++ b/index.html
@@ -10,170 +10,49 @@
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<script type="text/javascript" src="js/targetblank.js"></script>
-		<title>
-			ホーム｜葉-YaozeYE
-		</title>
+		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
-		<h1>
-			<i>
-				<b>
-					YaozeYE Personal Page
-				</b>
-			</i>
-		</h1>
-		<h2 style="font-size:45px;color:white;">
-			<i>
-				<b>
-						MERRY X'MAS!
-						<br />
-						頑張って！
-				</b>
-			</i>
-			<br />
-		</h2>
-		<p>
-			<a href="weeklymusic.html" style="text-decoration:none;">
-				<button type="button" value="WeeklyMusic Dec 24 - Dec 30">	
-					<h3 id="h-caps-red">
-							Weekly Music!<br />Dec 24-Dec 30
-					</h3>
-				</button>
-			</a>	
-			<br />
-		</p>
+		<h1><i><b>YaozeYE Personal Page</b></i></h1>
+		<h2 style="font-size:45px;color:white;"><i><b>HAPPY NEW YEAR!<br />頑張って！</b></i></h2>
+		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
 
 		<!--
 			Function Link
 		-->
-		<p style="font-size:2em;color:grey;">
-			<i>
-					------Function Module------
-			</i>
-			<br />
-		</p>
-		<p>
-			<a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">
-					webgl-clouds(HTML5)
-			</a>
-			<br />
-		</p>
-		<p>
-			<a href="crazy.html" style="font-size:1.5em;color:purple;">
-					crazy-tentacles(HTML5)
-			</a>
-			<br />
-		</p>
-		<p>
-			<a href="Demo1.html" style="font-size:1.5em;color:red;">
-					page-preloading1(HTML5)
-			</a>
-			<br />
-		</p>
-		<p>
-		<a href="Demo2.html" style="font-size:1.5em;color:blue;">
-				page-preloading2(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="ball.html" style="font-size:1.5em;color:black;">
-				ball-pool(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="textillate.html" style="font-size:1.5em;color:white;">
-				textillate(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="shine.html" style="font-size:1.5em;color:grey;">
-				shine(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">
-				Bubbles(Javascript)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">
-				loading(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">
-				snake(HTML5)
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="HTML_color.html" style="font-size:1em;color:green;">
-				HTML color
-		</a>
-		<br />
-		<br />
-		<br />
-		</p>
+		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
+		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
+		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
+		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
+		<p><a href="Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
+		<p><a href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
+		<p><a href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
+		<p><a href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
+		<p><a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
+		<p><a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
+		<p><a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
+		<p><a href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
 		<!--
 			Function Link Over
 		-->
 		<!--
 			Personal Info Start
 		-->
-		<p style="font-size:2em;color:grey;">
-			<i>
-					------Contact------
-			</i>
-			<br />
-		</p>
-		<p>
-		<a rel="external" href="https://github.com/yaozeye">
-			GitHub
-		</a>
-		<br />
-		</p>
-		<p>
-		<a href="https://twitter.com/xfy_yyz/" rel="external" title="Twitter">
-			Twitter
-		</a>
-		<br />
-		</p>
-		<p>
-		<a rel="external">
-			<img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="Tencent" title="Tencent" />
-		</a>
-		<br />
-		</p>
-		<p>
-		<a rel="external" style="text-decoration:none;">
-			<button type="button" onclick="alert('yaozeye@foxmail.com	;	yaozeye@outlook.com	;	yaozeye@yahoo.co.jp	;')">
-				Email
-			</button>
-		</a>
-		<br />
-		<br />
-		<br />
-		</p>
+		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
+		<p><a rel="external" href="https://github.com/yaozeye">GitHub</a><br /></p>
+		<p><a href="https://twitter.com/xfy_yyz/" rel="external" title="Twitter">Twitter</a><br /></p>
+		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="Tencent" title="Tencent" /></a><br /></p>
+		<p><a rel="external" style="text-decoration:none;"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com	;	yaozeye@outlook.com	;	yaozeye@yahoo.co.jp	;')"></input></a><br /><br /><br /></p>
 		<!--
 			Personal Info Over
 		-->
-		<p>
-		<a href="Log.html" style="font-size:1em;color:grey;">
-				Log
-		</a>
-		<br />
-		<br />
-		</p>
+		<p><a href="Log.html" style="font-size:1em;color:grey;">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p>
-			<a rel="external" href="https://validator.w3.org/check?uri=referer"><img
-				src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+			<a rel="external" href="https://validator.w3.org/check?uri=referer">
+				<img src="https://www.w3.org/Icons/valid-xhtml10" 
+					alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+			</a>
 		</p>		
 		<p>
 			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
