--- a/Log.html
+++ b/Log.html
@@ -429,7 +429,7 @@
 			<br />
 		</p>
 		<h1>2018</h1>
-		<p><br />01/06<br />code simplified<br /><br /><br /></p>
+		<p><br />01/06<br />code simplified<br />meta added<br /><br /></p>
 
 		<p>
 		<br />
