--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta name="description" content="Yaoze Ye Personal Website.">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="Content-Language" content="en-us">
+		<meta http-equiv="Content-Language" content="en-us" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta name="robots" content="all">
-		<meta name="author" content="yaozeye.github.io">
-		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved.">
-		<meta name="MSSmartTagsPreventParsing" content="true">
-		<meta http-equiv="imagetoolbar" content="false">
+		<meta http-equiv="imagetoolbar" content="false" />
+		<meta name="description" content="Yaoze Ye Personal Website." />
+		<meta name="robots" content="all" />
+		<meta name="author" content="yaozeye.github.io" />
+		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
+		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link rel="stylesheet" href="common/init.css" />
 		<link rel="stylesheet" href="common/divcolor.css" />
