--- a/Log.html
+++ b/Log.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="favicon.ico" />
-		<script type="text/javascript" src="js/targetblank.js"></script>
-		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="./favicon.ico" />
+		<script type="text/javascript" src="./js/targetblank.js"></script>
+		<!--[if lte IE 9]><script src="./select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
 		</title>
@@ -14,16 +14,18 @@
 			body {
 				color: #FFFFFF;
 				background: #000000;
-				font-family: Georgia, Arial, MS Pmincho, SimSun, MS Mincho;
+				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
 					}
 			iframe {
 			overflow:auto;
+			width:542px;
+			height:542px;
 			}
 		</style>
 	</head>
 	<body>
 		<p>
-			<a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
+			<a href="./index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
 				<b>
 					HOMEPAGE
 				</b>
@@ -33,12 +35,12 @@
 				Website History
 		</p>
 		<br />
-		<iframe width="542px" height="542px" src="svg/earthasia.svg" ></iframe>
+		<iframe src="./svg/earthasia.svg" ></iframe>
 		<br />
 
 		<br />
 		<p>
-			Last Updated On 06/01/2018 (DD/MM/YYYY):<br />"New Year"
+			Last Updated On 07/01/2018 (DD/MM/YYYY):<br />"New Year"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -429,8 +431,8 @@
 			<br />
 		</p>
 		<h1>2018</h1>
-		<p><br />01/06<br />code simplified<br />meta added<br /><br /></p>
-
+		<p><br />01/06<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /><br /></p>
+		<p>01/07<br />direction revised<br /><br /><br /><br /></p>
 		<p>
 		<br />
 		<br />
@@ -440,10 +442,13 @@
 		<br />
 		</p>
 		<p>
-			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
+			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss"
 					alt="Valid CSS!" />
+				<img style="border:0;width:88px;height:31px"
+					src="http://www.w3.org/Icons/valid-svg11"
+					alt="Valid SVG!" />
 			</a>
 		</p>
 		<p>
