--- a/index.html
+++ b/index.html
@@ -11,34 +11,33 @@
 		<meta name="author" content="yaozeye.github.io" />
 		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
-		<link rel="stylesheet" href="common/init.css" />
-		<link rel="stylesheet" href="common/divcolor.css" />
-		<link rel="apple-touch-icon" href="favicon.ico" />
-		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
-		<script type="text/javascript" src="js/targetblank.js"></script>
+		<link rel="stylesheet" href="./common/init.css" />
+		<link rel="stylesheet" href="./common/divcolor.css" />
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="./favicon.ico" />
+		<script type="text/javascript" src="./js/targetblank.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="./select/selectivizr.js"></script><![endif]-->
 		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
 		<h1><i><b>YaozeYE Personal Page</b></i></h1>
-		<h2 style="font-size:45px;color:white;"><i><b>HAPPY NEW YEAR!<br />頑張って！</b></i></h2>
-		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
-
+		<h2 style="font-size:45px;color:white;"><i><b>HAPPY NEW YEAR!</b></i></h2>
+		<p><a href="./weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
 		<!--
 			Function Link
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
-		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
-		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
-		<p><a href="Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
-		<p><a href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
-		<p><a href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
-		<p><a href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
-		<p><a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
-		<p><a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
-		<p><a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
-		<p><a href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
+		<p><a href="./webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
+		<p><a href="./crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
+		<p><a href="./Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
+		<p><a href="./Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
+		<p><a href="./ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
+		<p><a href="./textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
+		<p><a href="./shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
+		<p><a href="./bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
+		<p><a href="./loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
+		<p><a href="./snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
+		<p><a href="./HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
 		<!--
 			Function Link Over
 		-->
@@ -46,26 +45,29 @@
 			Personal Info Start
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
-		<p><a rel="external" href="https://github.com/yaozeye">GitHub</a><br /></p>
-		<p><a href="https://twitter.com/xfy_yyz/" rel="external" title="Twitter">Twitter</a><br /></p>
-		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="Tencent" title="Tencent" /></a><br /></p>
-		<p><a rel="external" style="text-decoration:none;"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com	;	yaozeye@outlook.com	;	yaozeye@yahoo.co.jp	;')"></input></a><br /><br /><br /></p>
+		<p><a rel="external" href="https://github.com/yaozeye" title="GitHub">GitHub</a><br /></p>
+		<p><a rel="external" href="https://twitter.com/xfy_yyz/" title="Twitter">Twitter</a><br /></p>
+		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
+		<p><a rel="external" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
 		<!--
 			Personal Info Over
 		-->
-		<p><a href="Log.html" style="font-size:1em;color:grey;">Log</a><br /><br /></p>
+		<p><a href="./Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p>
 			<a rel="external" href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/Icons/valid-xhtml10" 
-					alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+				<img style="border:0;width:88px;height:31px"
+					src="https://www.w3.org/Icons/valid-xhtml10" 
+					alt="Valid XHTML 1.0 Strict"
+					title="Valid XHTML 1.0 Strict" />
 			</a>
 		</p>		
 		<p>
 			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-					alt="Valid CSS!" />
+					alt="Valid CSS!"
+					title="Valid CSS!" />
 			</a>
 		</p>
 		<p id="copyright-white">
