--- a/adaptive-placeholders/index.html
+++ b/adaptive-placeholders/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en-us">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Adaptive Placeholder</title>
