--- a/number-progress/number-progress/index.html
+++ b/number-progress/number-progress/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en-us">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="assets/number-pb.css">
   <style>
   body {
-  	font-family: Verdana,Arial,Helvetica,sans-serif;
+  	font-family: Verdana, Arial, Helvetica, Sans-serif;
   }
   .top-banner a {
   	color: #FF534E;
