--- a/grid-effect/index.html
+++ b/grid-effect/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn" class="no-js">
+<html lang="en-us" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
