--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
 		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
-		<h1><i><b>YaozeYE Personal Page</b></i></h1>
-		<h2 style="font-size:45px;color:white;"><i><b>HAPPY NEW YEAR!</b></i></h2>
+		<h1 style="text-shadow: 1px 15px 45px #993300;font-variant:none;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
+		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>HAPPY NEW YEAR!</b></i></h2>
 		<p><a href="./weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
 		<!--
 			Function Link
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
+		
+		<p style="font-size:1.65em;color:white;font-variant:none;">--PhET Simulations--<br /></p>
+		<p><a href="./phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
+		<p><a href="./phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
+		<p><a href="./phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
+		<p style="font-size:1.65em;color:white;font-variant:none;">-^-PhET Simulations-^-<br /></p>
+		
 		<p><a href="./webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
 		<p><a href="./crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
 		<p><a href="./Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
@@ -45,10 +52,10 @@
 			Personal Info Start
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
-		<p><a rel="external" href="https://github.com/yaozeye" title="GitHub">GitHub</a><br /></p>
-		<p><a rel="external" href="https://twitter.com/xfy_yyz/" title="Twitter">Twitter</a><br /></p>
+		<p><a rel="external" href="https://github.com/yaozeye" style="font-variant:none;" title="GitHub">GitHub</a><br /></p>
+		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="font-variant:none;" title="Twitter">Twitter</a><br /></p>
 		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
-		<p><a rel="external" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
+		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
 		<!--
 			Personal Info Over
 		-->
@@ -69,7 +76,7 @@
 					alt="Valid CSS!"
 					title="Valid CSS!" />
 			</a>
-		</p>
+		</p><hr />
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
