--- a/sidebar-transitions/index.html
+++ b/sidebar-transitions/index.html
@@ -207,20 +207,20 @@
 						</header>
 						<div class="main clearfix">
 							<div id="st-trigger-effects" class="column">
-								<button data-effect="st-effect-1">Effect一</button>
-								<button data-effect="st-effect-2">Effect二</button>
-								<button data-effect="st-effect-3">Effect三</button>
-								<button data-effect="st-effect-4">Effect四</button>
-								<button data-effect="st-effect-5">Effect五</button>
-								<button data-effect="st-effect-6">Effect六</button>
-								<button data-effect="st-effect-7">Effect七</button>
-								<button data-effect="st-effect-8">Effect八</button>
-								<button data-effect="st-effect-9">Effect九</button>
-								<button data-effect="st-effect-10">Effect十</button>
-								<button data-effect="st-effect-11">Effect十一</button>
-								<button data-effect="st-effect-12">Effect十二</button>
-								<button data-effect="st-effect-13">Effect十三</button>
-								<button data-effect="st-effect-14">Effect十四</button>
+								<button data-effect="st-effect-1">Effect 1</button>
+								<button data-effect="st-effect-2">Effect 2</button>
+								<button data-effect="st-effect-3">Effect 3</button>
+								<button data-effect="st-effect-4">Effect 4</button>
+								<button data-effect="st-effect-5">Effect 5</button>
+								<button data-effect="st-effect-6">Effect 6</button>
+								<button data-effect="st-effect-7">Effect 7</button>
+								<button data-effect="st-effect-8">Effect 8</button>
+								<button data-effect="st-effect-9">Effect 9</button>
+								<button data-effect="st-effect-10">Effect 10</button>
+								<button data-effect="st-effect-11">Effect 11</button>
+								<button data-effect="st-effect-12">Effect 12</button>
+								<button data-effect="st-effect-13">Effect 13</button>
+								<button data-effect="st-effect-14">Effect 14</button>
 							</div>
 						</div><!-- /main -->
 						<div class="footer-banner" style="width:728px; margin:160px auto 0"></div>
