--- a/Log.html
+++ b/Log.html
@@ -15,7 +15,7 @@
 				color: #FFFFFF;
 				background: #000000;
 				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
-					}
+				}
 			iframe {
 			overflow:auto;
 			width:542px;
@@ -40,7 +40,7 @@
 
 		<br />
 		<p>
-			Last Updated On 07/01/2018 (DD/MM/YYYY):<br />"New Year"
+			Last Updated On 14/01/2018 (DD/MM/YYYY):<br />"Fabulous HTML5 Physics Lab Simulations added"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -432,7 +432,8 @@
 		</p>
 		<h1>2018</h1>
 		<p><br />01/06<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /><br /></p>
-		<p>01/07<br />direction revised<br /><br /><br /><br /></p>
+		<p>01/07<br />direction revised<br /><br /><br /></p>
+		<p>01/14<br />PhET Simulations added<br /><br /><br /></p>
 		<p>
 		<br />
 		<br />
