--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<p><a href="./phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
 		<p><a href="./phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
 		<p><a href="./phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
+		<p><a href="./phet/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
 		<p style="font-size:1.65em;color:white;font-variant:none;">-^-PhET Simulations-^-<br /></p>
 		
 		<p><a href="./webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
