--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
 		
-		<p style="font-size:1.65em;color:white;font-variant:none;">--PhET Simulations--<br /></p>
+		<p style="font-size:1.65em;color:white;font-variant:none;">-v-PhET Simulations-v-<br /></p>
 		<p><a href="./phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
 		<p><a href="./phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
 		<p><a href="./phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
@@ -78,6 +78,16 @@
 					title="Valid CSS!" />
 			</a>
 		</p><hr />
+		<script>
+			document.write("PixelDepth: " + screen.pixelDepth + "bit" + "<br />");
+			document.write("BrowserCode: " + navigator.appCodeName + "<br />");
+			document.write("BrowserCore: " + navigator.appName + "<br />");
+			document.write("JavaSupport: " + navigator.javaEnabled() + "<br />");
+			document.write("CookieSupport: " + navigator.cookieEnabled + "<br />");
+			document.write("OS: " + navigator.appVersion + "<br />");
+			document.write("OS Platform: " + navigator.platform + "<br />");
+			document.write("HistoryURL(s)： " + history.length + "<br />");
+		</script>
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
