--- a/Log.html
+++ b/Log.html
@@ -40,7 +40,7 @@
 
 		<br />
 		<p>
-			Last Updated On 14/01/2018 (DD/MM/YYYY):<br />"Fabulous HTML5 Physics Lab Simulations added"
+			Last Updated On 25/01/2018 (DD/MM/YYYY):<br />"I've learnt JavaScript!"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -434,6 +434,7 @@
 		<p><br />01/06<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /><br /></p>
 		<p>01/07<br />direction revised<br /><br /><br /></p>
 		<p>01/14<br />PhET Simulations added<br /><br /><br /></p>
+		<p>01/25<br />index javascript test<br />calc added<br /><br /></p>
 		<p>
 		<br />
 		<br />
