--- a/index.html
+++ b/index.html
@@ -78,16 +78,40 @@
 					title="Valid CSS!" />
 			</a>
 		</p><hr />
-		<script>
-			document.write("PixelDepth: " + screen.pixelDepth + "bit" + "<br />");
-			document.write("BrowserCode: " + navigator.appCodeName + "<br />");
-			document.write("BrowserCore: " + navigator.appName + "<br />");
-			document.write("JavaSupport: " + navigator.javaEnabled() + "<br />");
-			document.write("CookieSupport: " + navigator.cookieEnabled + "<br />");
-			document.write("OS: " + navigator.appVersion + "<br />");
-			document.write("OS Platform: " + navigator.platform + "<br />");
-			document.write("HistoryURL(s)： " + history.length + "<br />");
-		</script>
+		<script type"text/javascript">
+			document.write("PixelDepth: " + screen.pixelDepth + "bit");
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("BrowserCode: " + navigator.appCodeName);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("BrowserCore: " + navigator.appName);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("JavaSupport: " + navigator.javaEnabled());
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("CookieSupport: " + navigator.cookieEnabled);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("OS: " + navigator.appVersion);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("OS Platform: " + navigator.platform);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			document.write("HistoryURL(s)： " + history.length);
+//<![CDATA[
+var string = "<br>";
+//]]>
+			</script>
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
