--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					title="Valid CSS!" />
 			</a>
 		</p><hr />
-		<script type"text/javascript">
+		<script type="text/javascript">
 			document.write("PixelDepth: " + screen.pixelDepth + "bit");
 //<![CDATA[
 var string = "<br>";
