--- a/index.html
+++ b/index.html
@@ -81,35 +81,35 @@
 		<script type="text/javascript">
 			document.write("PixelDepth: " + screen.pixelDepth + "bit");
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("BrowserCode: " + navigator.appCodeName);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("BrowserCore: " + navigator.appName);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("JavaSupport: " + navigator.javaEnabled());
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("CookieSupport: " + navigator.cookieEnabled);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("OS: " + navigator.appVersion);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("OS Platform: " + navigator.platform);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			document.write("HistoryURL(s)： " + history.length);
 //<![CDATA[
-var string = "<br>";
+var string = "<br />";
 //]]>
 			</script>
 		<p id="copyright-white">
