--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@
 			</a>
 		</p><hr />
 		<script type="text/javascript">
-			document.write("PixelDepth: " + screen.pixelDepth + "bit");
+			document.write("PixelDepth: " + screen.pixelDepth + "bit" + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("BrowserCode: " + navigator.appCodeName);
+			document.write("BrowserCode: " + navigator.appCodeName + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("BrowserCore: " + navigator.appName);
+			document.write("BrowserCore: " + navigator.appName + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("JavaSupport: " + navigator.javaEnabled());
+			document.write("JavaSupport: " + navigator.javaEnabled() + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("CookieSupport: " + navigator.cookieEnabled);
+			document.write("CookieSupport: " + navigator.cookieEnabled + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("OS: " + navigator.appVersion);
+			document.write("OS: " + navigator.appVersion + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("OS Platform: " + navigator.platform);
+			document.write("OS Platform: " + navigator.platform + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
-			document.write("HistoryURL(s)： " + history.length);
+			document.write("HistoryURL(s)： " + history.length + "<br />");
 //<![CDATA[
 var string = "<br />";
 //]]>
