--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
 		<meta name="author" content="yaozeye.github.io" />
 		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
-		<link rel="stylesheet" href="./common/init.css" />
-		<link rel="stylesheet" href="./common/divcolor.css" />
-		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="./favicon.ico" />
-		<script type="text/javascript" src="./js/targetblank.js"></script>
-		<!--[if lte IE 9]><script type="text/javascript" src="./select/selectivizr.js"></script><![endif]-->
+		<link rel="stylesheet" href="common/init.css" />
+		<link rel="stylesheet" href="common/divcolor.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" />
+		<script type="text/javascript" src="js/targetblank.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="select/selectivizr.js"></script><![endif]-->
 		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
 		<h1 style="text-shadow: 1px 15px 45px #993300;font-variant:none;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
 		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>HAPPY NEW YEAR!</b></i></h2>
-		<p><a href="./weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
+		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
 		<!--
 			Function Link
 		-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
 		
 		<p style="font-size:1.65em;color:white;font-variant:none;">-v-PhET Simulations-v-<br /></p>
-		<p><a href="./phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
-		<p><a href="./phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
-		<p><a href="./phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
-		<p><a href="./phet/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
+		<p><a href="phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
+		<p><a href="phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
+		<p><a href="phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
+		<p><a href="phet/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
 		<p style="font-size:1.65em;color:white;font-variant:none;">-^-PhET Simulations-^-<br /></p>
 		
-		<p><a href="./webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
-		<p><a href="./crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
-		<p><a href="./Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
-		<p><a href="./Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
-		<p><a href="./ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
-		<p><a href="./textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
-		<p><a href="./shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
-		<p><a href="./bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
-		<p><a href="./loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
-		<p><a href="./snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
-		<p><a href="./HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
+		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
+		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
+		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
+		<p><a href="Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
+		<p><a href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
+		<p><a href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
+		<p><a href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
+		<p><a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
+		<p><a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
+		<p><a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
+		<p><a href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
 		<!--
 			Function Link Over
 		-->
@@ -60,7 +60,7 @@
 		<!--
 			Personal Info Over
 		-->
-		<p><a href="./Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
+		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p>
 			<a rel="external" href="https://validator.w3.org/check?uri=referer">
@@ -79,39 +79,24 @@
 			</a>
 		</p><hr />
 		<script type="text/javascript">
-			document.write("PixelDepth: " + screen.pixelDepth + "bit" + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("BrowserCode: " + navigator.appCodeName + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("BrowserCore: " + navigator.appName + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("JavaSupport: " + navigator.javaEnabled() + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("CookieSupport: " + navigator.cookieEnabled + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("OS: " + navigator.appVersion + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("OS Platform: " + navigator.platform + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			document.write("HistoryURL(s)： " + history.length + "<br />");
-//<![CDATA[
-var string = "<br />";
-//]]>
-			</script>
+			document.write("PixelDepth: " + screen.pixelDepth + "bit");
+</script><script type="text/javascript">
+			document.write("BrowserCode: " + navigator.appCodeName);
+</script><script type="text/javascript">
+			document.write("BrowserCore: " + navigator.appName);
+</script><script type="text/javascript">
+			document.write("JavaSupport: " + navigator.javaEnabled());
+</script><script type="text/javascript">
+			document.write("CookieSupport: " + navigator.cookieEnabled);
+</script><script type="text/javascript">
+			document.write("OS: " + navigator.appVersion);
+</script><script type="text/javascript">
+			document.write("OS Platform: " + navigator.platform);
+</script><script type="text/javascript">
+			document.write("HistoryURL(s)： " + history.length);
+		</script>
+		<script type="text/javascript">
+		</script>
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
