--- a/number-progress/number-progress/index.html
+++ b/number-progress/number-progress/index.html
@@ -4,9 +4,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NumberProgressBar</title>
+		<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="../../favicon.ico" />
   <link rel="stylesheet" type="text/css" href="assets/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/style.css">
   <link rel="stylesheet" type="text/css" href="assets/number-pb.css">
+		<script type="text/javascript" src="../../js/targetblank.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="../../select/selectivizr.js"></script><![endif]-->
   <style>
   body {
   	font-family: Verdana, Arial, Helvetica, Sans-serif;
@@ -48,8 +52,8 @@
     <div class="control full">100</div>
   </section>
 
-  <p><a href="https://yaozeye.github.io">Yaoze YE</a></p>
-  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/number-progress/">This idea</a> was designed by <a href="https://yaozeye.github.io">Yaoze Ye</a> by HTML + CSS.</p>
+  <p><a href="https://yaozeye.github.io" rel="externak">Yaoze YE</a></p>
+  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/number-progress/" rel="external">This idea</a> was designed by <a href="https://yaozeye.github.io">Yaoze Ye</a> by HTML + CSS.</p>
   <div class="footer-banner" style="width:728px; margin:60px auto"></div>
 </div>
 
