--- a/Log.html
+++ b/Log.html
@@ -40,7 +40,7 @@
 
 		<br />
 		<p>
-			Last Updated On 25/01/2018 (DD/MM/YYYY):<br />"I've learnt JavaScript!"
+			Last Updated On 2018-01-26 (YYYY/MM/DD):<br />"I've learnt JavaScript! I've improved my JavaScript!"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -296,18 +296,9 @@
 			Today's update may reduce 0.01ms-500ms loading time.
 			<br />
 			music! the first step of 'Weekly Music'
-			<br />
-			<br />
-			<br />
+			<br /><br /><br />
 		</p>
-		<p>
-			11/25
-			<br />
-			Weekly Music Updated ( Nov.26 - Dec.02 )
-			<br />
-			<br />
-			<br />
-		</p>
+		<p>11/25<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p>
 		<p>
 			11/27
 			<br />
@@ -408,48 +399,22 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			12/23
-			<br />
-			weekly music updated
-			<br />
-			partly optimized for w3 standard
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/24
-			<br />
-			X'MAS THEME ADDED
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-		</p>
+		<p>12/23<br />weekly music updated<br />partly optimized for w3 standard<br /><br /><br /></p>
+		<p>12/24<br />X'MAS THEME ADDED<br /><br /><br /><br /><br /><br /><br /></p>
 		<h1>2018</h1>
 		<p><br />01/06<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /><br /></p>
 		<p>01/07<br />direction revised<br /><br /><br /></p>
 		<p>01/14<br />PhET Simulations added<br /><br /><br /></p>
-		<p>01/25<br />index javascript test<br />calc added<br /><br /></p>
-		<p>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		</p>
+		<p>01/25<br />index javascript test<br />calc added<br /><br /><br /></p>
+		<p>01/26<br />index javascript modified<br />log site-wide pure https offered<br />log code simplified<br /><br /></p>
+		<p><br /><br /><br /><br /><br /><br /></p>
 		<p>
 			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss"
 					alt="Valid CSS!" />
 				<img style="border:0;width:88px;height:31px"
-					src="http://www.w3.org/Icons/valid-svg11"
+					src="https://www.w3.org/Icons/valid-svg11"
 					alt="Valid SVG!" />
 			</a>
 		</p>
