--- a/Log.html
+++ b/Log.html
@@ -40,7 +40,7 @@
 
 		<br />
 		<p>
-			Last Updated On 2018-01-26 (YYYY/MM/DD):<br />"I've learnt JavaScript! I've improved my JavaScript!"
+			Last Updated On 2018-01-29 (YYYY/MM/DD):<br />"I've learnt JavaScript! I've improved my JavaScript! I've improved my JavaScript again!"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -385,20 +385,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			12/21
-			<br />
-			index div modified
-			<br />
-			Email button modified
-			<br />
-			css file divided
-			<br />
-			weekly music series grammar standard improved in future
-			<br />
-			<br />
-			<br />
-		</p>
+		<p>12/21<br />index div modified<br />Email button modified<br />css file divided<br />weekly music series grammar standard improved in future<br /><br /><br /></p>
 		<p>12/23<br />weekly music updated<br />partly optimized for w3 standard<br /><br /><br /></p>
 		<p>12/24<br />X'MAS THEME ADDED<br /><br /><br /><br /><br /><br /><br /></p>
 		<h1>2018</h1>
@@ -407,6 +394,7 @@
 		<p>01/14<br />PhET Simulations added<br /><br /><br /></p>
 		<p>01/25<br />index javascript test<br />calc added<br /><br /><br /></p>
 		<p>01/26<br />index javascript modified<br />log site-wide pure https offered<br />log code simplified<br /><br /></p>
+		<p>01/29<br />index javascript modified<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
 		<p>
 			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
