--- a/index.html
+++ b/index.html
@@ -80,23 +80,21 @@
 		</p><hr />
 		<script type="text/javascript">
 			document.write("PixelDepth: " + screen.pixelDepth + "bit");
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("BrowserCode: " + navigator.appCodeName);
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("BrowserCore: " + navigator.appName);
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("JavaSupport: " + navigator.javaEnabled());
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("CookieSupport: " + navigator.cookieEnabled);
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("OS: " + navigator.appVersion);
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("OS Platform: " + navigator.platform);
-</script><script type="text/javascript">
+</script><p></p><script type="text/javascript">
 			document.write("HistoryURL(s)： " + history.length);
-		</script>
-		<script type="text/javascript">
-		</script>
+		</script><p></p>
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
