--- a/Log.html
+++ b/Log.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> 
 		<link rel="apple-touch-icon" href="./favicon.ico" />
-		<script type="text/javascript" src="./js/targetblank.js"></script>
+		<script src="./js/targetblank.js"></script>
 		<!--[if lte IE 9]><script src="./select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
 		</title>
-		<style type="text/css">
+		<style>
 			body {
 				color: #FFFFFF;
 				background: #000000;
