--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 		<h1 style="text-shadow: 1px 15px 45px #993300;font-variant:none;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
 		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>HAPPY NEW YEAR!</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
-		<!--
-			Function Link
-		-->
+		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
 		
 		<p style="font-size:1.65em;color:white;font-variant:none;">-v-PhET Simulations-v-<br /></p>
@@ -46,20 +44,14 @@
 		<p><a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
 		<p><a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
 		<p><a href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
-		<!--
-			Function Link Over
-		-->
-		<!--
-			Personal Info Start
-		-->
+		<!--Function Link Over-->
+		<!--Personal Info Start-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
 		<p><a rel="external" href="https://github.com/yaozeye" style="font-variant:none;" title="GitHub">GitHub</a><br /></p>
 		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="font-variant:none;" title="Twitter">Twitter</a><br /></p>
 		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
 		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
-		<!--
-			Personal Info Over
-		-->
+		<!--Personal Info Over-->
 		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p>
