--- a/Log.html
+++ b/Log.html
@@ -16,10 +16,16 @@
 				background: #000000;
 				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
 				}
-			iframe {
+			iframe.earth {
 			overflow:auto;
 			width:542px;
 			height:542px;
+			}
+			iframe.h5logo
+			{
+			overflow:auto;
+			width:512px;
+			height:512px;
 			}
 		</style>
 	</head>
@@ -35,7 +41,8 @@
 				Website History
 		</p>
 		<br />
-		<iframe src="./svg/earthasia.svg" ></iframe>
+		<iframe id="h5logo" src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg"></iframe>
+		<iframe id="earth" src="./svg/earthasia.svg"></iframe>
 		<br />
 
 		<br />
