--- a/Log.html
+++ b/Log.html
@@ -16,12 +16,12 @@
 				background: #000000;
 				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
 				}
-			iframe.earth {
+			iframe .earth {
 			overflow:auto;
 			width:542px;
 			height:542px;
 			}
-			iframe.h5logo
+			iframe .h5logo
 			{
 			overflow:auto;
 			width:512px;
@@ -41,7 +41,7 @@
 				Website History
 		</p>
 		<br />
-		<iframe id="h5logo" src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg"></iframe>
+		<iframe id="h5logo" src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg"></iframe><p></p>
 		<iframe id="earth" src="./svg/earthasia.svg"></iframe>
 		<br />
 
